Ajuste de validación de campos

--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -7,7 +7,7 @@
 			</h2>
 		</div>
 	</md-toolbar>
-	<form name="createForm" novalidate>
+	<form name="loginForm" novalidate>
 	<md-card layout="row" layout-sm="column" layout-align="center center" layout-wrap="">
 		<md-card-content>
 
@@ -16,8 +16,8 @@
 					<label>Nombre de usuario</label>
 
 					<input name="username" id="username" ng-model="vm.login.username" type="text" ng-required="true">
-					<div ng-messages="createForm.username.$error" ng-if="createForm.username.$dirty">
-						<div ng-message="required">Su nombre de usuario debe tener almenos 1 caracter .</div>
+					<div ng-messages="loginForm.username.$error" ng-if="loginForm.username.$touched">
+						<div ng-message="required">Por favor ingrese su nombre de usuario.</div>
 					</div>
 				</md-input-container>
 
@@ -26,9 +26,9 @@
 			<md-input-container class="md-block">
 				<label>Contraseña</label>
 				<input name="password" id="password" ng-model="vm.userData.password"  type="password" ng-required="true" minlength="5">
-				<div ng-messages="createForm.password.$error" ng-if="createForm.password.$dirty">
-						<div ng-message="required">Su contraseña debe tener minimo 5 caracteres.</div>
-						<div ng-message="minlength">Su contraseña debe tener minimo 5 caracteres.</div>
+				<div ng-messages="loginForm.password.$error" ng-if="loginForm.password.$touched">
+						<div ng-message="required">Por favor ingrese su contraseña.</div>
+						<div ng-message="minlength">Su contraseña debe tener mínimo 5 caracteres.</div>
 				</div>
 			</md-input-container>
 			<md-checkbox md-no-ink="" aria-label="¿Recordarte?" ng-model="vm.userData.remember" >
@@ -36,7 +36,7 @@
 			</md-checkbox>
 
 			<section layout="row" layout-sm="column" layout-align="center center" layout-wrap="">
-				<md-button ng-click="vm.login()" class="md-raised md-primary">Iniciar</md-button>
+				<md-button ng-click="vm.login()" ng-disabled="loginForm.$invalid" class="md-raised md-primary">Iniciar</md-button>
 			</section>
 
 			<section>
