--- a/src/app/demands/update/update_demand.html
+++ b/src/app/demands/update/update_demand.html
@@ -12,49 +12,37 @@
     <md-dialog-content>
       <md-input-container>
         <label>Nombre de la demanda</label>
-        <input> <!--name="title" id="title" ng-model="vm.demand.title" ng-required="true" md-maxlength="50" md-minlength="5"-->
-        <!--
-        <div ng-messages="createForm.title.$error" ng-if="createForm.title.$dirty">
-                    <div ng-message="required">Por favor ingrese el titulo de la demanda.</div>
-                </div>
-                -->
-      </md-input-container>
+        <input>
+          <!--Esto es opcional-->
+        </md-input-container>
       <md-input-container>
-        <label>¿Desea cambiar la descripción?</label>
-        <input> <!--name="description" id="description" ng-model="vm.demand.description" ng-required="true">-->
-        <!--
-				<div ng-messages="createForm.description.$error" ng-if="createForm.description.$dirty">
-					<div ng-message="required">Por favor ingrese la descripción de la demanda.</div>
-				</div>
-				-->
-      </md-input-container>
+        <label>Descripción</label>
+        <input>
+          <!--Esto es opcional-->
+        </md-input-container>
       <md-content layout="row" flex>
         <md-input-container class="md-block" flex>
-          <label>¿Desea cambiar la latitud?</label>
-          <input ng-model="vm.profile.latitude" type="text" required>
+          <label>Latitud actual</label>
+          <input ng-model="vm.profile.latitude" type="text" required><!--Esto es opcional-->
         </md-input-container>
         <md-input-container class="md-block" flex>
-          <label>¿Desea cambiar la longitud?</label>
-          <input ng-model="vm.profile.longitude" type="text" required>
+          <label>Longitud actual</label>
+          <input ng-model="vm.profile.longitude" type="text" required><!--Esto es opcional-->
         </md-input-container>
       </md-content>
       <md-input-container>
-        <label>¿Desea cambiar el precio?</label>
-        <input name="price" id="price" ng-model="vm.demand.price" ng-required="true">
-        <div ng-messages="createForm.price.$error" ng-if="createForm.price.$dirty">
-          <div ng-message="required">Por favor ingrese el precio de la demanda.</div>
-        </div>
-      </md-input-container>
+        <label>Prectio actual</label>
+        <input>
+          <!--Esto es opcional-->
+        </md-input-container>
       <md-input-container class="md-block">
-        <label>¿Desea cambiar la fecha?</label>
-        <input name="deadline" id="deadline" ng-model="vm.demand.deadline" ng-required="true">
-        <div ng-messages="createForm.deadline.$error" ng-if="createForm.deadline.$dirty">
-          <div ng-message="required">Por favor ingrese fecha máxima de la demanda.</div>
-        </div>
-      </md-input-container>
+        <label>Fecha actuak</label>
+        <input>
+          <!--Esto es opcional-->
+        </md-input-container>
 
       <md-button ng-click="vm.closeDialog()" class="md-primary">Cancelar</md-button>
-      <md-button ng-click="vm.createDemand()" class="md-primary" ng-disabled="createForm.$invalid">Crear</md-button>
+      <md-button ng-click="vm.createDemand()" class="md-primary">Guardar</md-button>
     </md-dialog-content>
   </form>
 </md-dialog>
