--- a/src/app/offer/update/update_offer.html
+++ b/src/app/offer/update/update_offer.html
@@ -42,7 +42,7 @@
         </md-input-container>
 
       <md-button ng-click="vm.closeDialog()" class="md-primary">Cancelar</md-button>
-      <md-button ng-click="vm.updateOffer()" class="md-primary" >Guardar</md-button>
+      <md-button ng-click="vm.updateOffer()" class="md-primary" Guardar</md-button>
     </md-dialog-content>
   </form>
 </md-dialog>
