--- a/src/app/demands/update/update_demand.html
+++ b/src/app/demands/update/update_demand.html
@@ -10,39 +10,40 @@
   </md-toolbar>
   <form name="createForm" novalidate>
     <md-dialog-content>
-      <md-input-container>
-        <label>Nombre de la demanda</label>
-        <input>
-          <!--Esto es opcional-->
-        </md-input-container>
-      <md-input-container>
-        <label>Descripción</label>
-        <input>
-          <!--Esto es opcional-->
-        </md-input-container>
-      <md-content layout="row" flex>
-        <md-input-container class="md-block" flex>
-          <label>Latitud actual</label>
-          <input ng-model="vm.profile.latitude" type="text" required><!--Esto es opcional-->
-        </md-input-container>
-        <md-input-container class="md-block" flex>
-          <label>Longitud actual</label>
-          <input ng-model="vm.profile.longitude" type="text" required><!--Esto es opcional-->
-        </md-input-container>
-      </md-content>
-      <md-input-container>
-        <label>Prectio actual</label>
-        <input>
-          <!--Esto es opcional-->
-        </md-input-container>
-      <md-input-container class="md-block">
-        <label>Fecha actuak</label>
-        <input>
-          <!--Esto es opcional-->
-        </md-input-container>
+		<md-input-container class="md-block">
+			<label>Titulo</label>
+			<input name="title" id="title" ng-model="vm.demand.title" ng-required="true" md-maxlength="50" md-minlength="5">
+			<div ng-messages="createForm.title.$error" ng-if="createForm.title.$dirty">
+				<div ng-message="required">Por favor ingrese el titulo de la demanda.</div>
+			</div>
+		</md-input-container>
+		<md-input-container class="md-block">
+			<label>Descripción</label>
+			<input name="description" id="description" ng-model="vm.demand.description" ng-required="true">
+			<div ng-messages="createForm.description.$error" ng-if="createForm.description.$dirty">
+				<div ng-message="required">Por favor ingrese la descripción de la demanda.</div>
+			</div>
+		</md-input-container>
+		<md-content layout="row" flex>
+			<md-input-container class="md-block" flex>
+				<label>Latitud</label>
+				<input ng-model="vm.profile.latitude" type="text" required>
+			</md-input-container>
+			<md-input-container class="md-block" flex>
+				<label>Longitud</label>
+				<input ng-model="vm.profile.longitude" type="text" required>
+			</md-input-container>
+		</md-content>
+		<md-input-container class="md-block">
+			<label>Fecha máxima</label>
+			<input name="deadline" id="deadline" ng-model="vm.demand.deadline" ng-required="true">
+			<div ng-messages="createForm.deadline.$error" ng-if="createForm.deadline.$dirty">
+				<div ng-message="required">Por favor ingrese fecha máxima de la demanda.</div>
+			</div>
+		</md-input-container>
 
-      <md-button ng-click="vm.closeDialog()" class="md-primary">Cancelar</md-button>
-      <md-button ng-click="vm.createDemand()" class="md-primary">Guardar</md-button>
+		<md-button ng-click="vm.closeDialog()" class="md-primary">Cancelar</md-button>
+		<md-button ng-click="vm.updateDemand()" class="md-primary">Actualizar</md-button>
     </md-dialog-content>
   </form>
 </md-dialog>
