--- a/src/app/user/view/viewUser.html
+++ b/src/app/user/view/viewUser.html
@@ -7,7 +7,7 @@
 				<div>{{vm.profile.username}}</div>
 			</div>
 		</div>
-		<md-button class="md-fab md-fab-bottom-right fab-border" aria-label="Favorite">
+		<md-button class="md-fab md-fab-bottom-right fab-border" aria-label="Favorite" ng-if="!vm.showEdit">
 			<md-icon md-svg-icon="star_fill"></md-icon>
 		</md-button>
 	</md-toolbar>
@@ -50,7 +50,7 @@
 						<input value=" " readonly/>
 					</md-input-container>
 				</md-content>
-				<md-button class="md-primary" ng-click="vm.openEditProfileDialog($event)">Editar perfil</md-button>
+				<md-button class="md-primary" ng-click="vm.openEditProfileDialog($event)" ng-if="vm.showEdit">Editar perfil</md-button>
 			</md-content>
 		</md-card-content>
 	</md-card>
