--- a/src/app/demands/update/update_demand.html
+++ b/src/app/demands/update/update_demand.html
@@ -24,23 +24,15 @@
 				<div ng-message="required">Por favor ingrese la descripción de la demanda.</div>
 			</div>
 		</md-input-container>
-		<md-content layout="row" flex>
-			<md-input-container class="md-block" flex>
-				<label>Latitud</label>
-				<input ng-model="vm.profile.latitude" type="text" required>
+		<div class="md-block">
+			<md-datepicker name="deadline" ng-model="vm.demand.deadline" md-placeholder="Fecha máxima" required></md-datepicker>
+			</br>
+			<md-input-container>
+				<div class="validation-messages" ng-messages="createForm.deadline.$error" ng-if="createForm.deadline.$touched">
+					<div ng-message="required">Por favor ingrese fecha máxima de la demanda.</div>
+				</div>
 			</md-input-container>
-			<md-input-container class="md-block" flex>
-				<label>Longitud</label>
-				<input ng-model="vm.profile.longitude" type="text" required>
-			</md-input-container>
-		</md-content>
-		<md-input-container class="md-block">
-			<label>Fecha máxima</label>
-			<input name="deadline" id="deadline" ng-model="vm.demand.deadline" ng-required="true">
-			<div ng-messages="createForm.deadline.$error" ng-if="createForm.deadline.$dirty">
-				<div ng-message="required">Por favor ingrese fecha máxima de la demanda.</div>
-			</div>
-		</md-input-container>
+		</div>
 
 		<md-button ng-click="vm.closeDialog()" class="md-primary">Cancelar</md-button>
 		<md-button ng-click="vm.updateDemand()" class="md-primary">Actualizar</md-button>
