--- a/src/app/demands/demands.html
+++ b/src/app/demands/demands.html
@@ -6,12 +6,39 @@
 			</h2>
 		</div>
 	</md-toolbar>
+	<md-card>
+		<md-card-content>
+			<v-accordion class="vAccordion--default">
+				<v-pane>
+					<v-pane-header>
+						Filtrar demandas
+					</v-pane-header>
+					<v-pane-content>
+						<div layout="row" flex>
+							<md-input-container class="md-block" flex>
+								<label>Titulo</label>
+								<input name="titleSearch" id="titleSearch" ng-model="vm.search.title">
+							</md-input-container>
+							<md-input-container class="md-block" flex>
+								<label>Descripción</label>
+								<input name="descriptionSearch" id="descriptionSearch" ng-model="vm.search.description">
+							</md-input-container>
+							<md-content layout="column">
+								<label>Puntuación</label>
+								<uib-rating state-on="'fa fa-star'" state-off="'fa fa-star-o'" ng-model="vm.search.rating"></uib-rating>
+							</md-content>
+						</div>
+					</v-pane-content>
+				</v-pane>
+			</v-accordion>
+		</md-card-content>
+	</md-card>
 	<md-content>
 		<md-card>
 			<md-card-content>
 				<h2>Ultimas demandas</h2>
 				<md-list>
-					<md-item ng-repeat="item in vm.demands">
+					<md-item ng-repeat="item in vm.demands | filter: vm.search as results" class="animate-repeat">
 						<md-item-content layout="row">
 							<div class="inset">
 								<img ng-src="{{item.image_url}}" class="md-avatar" />
@@ -32,6 +59,11 @@
 						</md-item-content>
 						<md-divider md-inset hide-sm ng-if="!$last"/>
 						<md-divider hide-gt-sm ng-if="!$last"/>
+					</md-item>
+					<md-item ng-if="results.length === 0" class="animate-repeat">
+						<div layout="column" layout-align="center center">
+							<h4>No se han encontrado resultados para tu búsqueda</h4>
+						</div>
 					</md-item>
 					<md-divider/>
 					<md-item layout>
