--- a/src/app/index.css
+++ b/src/app/index.css
@@ -148,4 +148,31 @@ md-content.md-default-theme {
 		width: 465px;
 	}
 }
-	
+
+.animate-repeat.ng-move,
+.animate-repeat.ng-enter,
+.animate-repeat.ng-leave {
+	-webkit-transition: 400ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+	-moz-transition: 400ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+	-ms-transition: 400ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+	-o-transition: 400ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+	transition: 400ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
+	display: block;
+	overflow: hidden;
+}
+
+.animate-repeat.ng-leave.ng-leave-active,
+.animate-repeat.ng-move,
+.animate-repeat.ng-enter {
+	opacity: 0;
+	width: 0px;
+	height: 0px;
+}
+
+.animate-repeat.ng-leave,
+.animate-repeat.ng-move.ng-move-active,
+.animate-repeat.ng-enter.ng-enter-active {
+	opacity: 1;
+	width: inherit;
+	height: inherit;
+}
