--- a/src/app/user/view/viewUser.html
+++ b/src/app/user/view/viewUser.html
@@ -70,6 +70,7 @@
 		<md-list flex>
 			<md-list-item ng-repeat="demand in vm.profile.demands">
 				<p>{{ demand.id + " - " +demand.name }}</p>
+				<md-button class="md-primary" >Demanda solucionada</md-button>
 				<md-button class="md-primary" ng-click="vm.openEditDemandDialog($event, demand.id)">Editar</md-button>
 				<md-button class="md-primary" ng-click="vm.openDeleteDemandDialog($event, demand.id)">Eliminar</md-button>
 			</md-list-item>
@@ -92,6 +93,7 @@
 		<md-list flex>
 			<md-list-item ng-repeat="offer in vm.profile.offers">
 				<p>{{ offer.id + " - " +offer.name }}</p>
+				<md-button class="md-primary" >Oferta solucionada</md-button>
 				<md-button class="md-primary" ng-click="vm.openEditOfferDialog($event, offer.id)">Editar</md-button>
 				<md-button class="md-primary" ng-click="vm.openDeleteOfferDialog($event, offer.id)">Eliminar</md-button>
 			</md-list-item>
