Boton "Todas las ofertas" y "Todas las demandas" funcionales

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -21,6 +21,6 @@
       </md-switch>
     </div>
   </form>
-  <md-button ng-click="">Todas las Ofertas</md-button>
-  <md-button ng-click="">Todas las Demandas</md-button>
+  <md-button ng-click="vm.offersView()">Todas las Ofertas</md-button>
+  <md-button ng-click="vm.demandsView()">Todas las Demandas</md-button>
 </div>
