--- a/src/app/index.css
+++ b/src/app/index.css
@@ -65,6 +65,10 @@ md-content.md-default-theme {
   position: absolute;
 }
 
+#contenido{
+  color: white;
+}
+
 .inLine {
   display: inline-flex;
   font-size: 0.5em;
