Estado del usuario, integración con perfil de usuario, detección de chat entrante

--- a/src/app/chat/chat.html
+++ b/src/app/chat/chat.html
@@ -12,7 +12,7 @@
 				<md-list flex>
 					<md-subheader class="md-no-sticky">Chat</md-subheader>
 					<md-list-item ng-repeat="message in vm.messages">
-						<i>{{ message.from }}</i>: <p>{{ message.body }}</p>
+						<i>{{ message.from }}</i>:&nbsp;<p>{{ message.body }}</p>
 					</md-list-item>
 				</md-list>
 			</md-content>
