--- a/src/app/user/view/viewUser.html
+++ b/src/app/user/view/viewUser.html
@@ -42,14 +42,10 @@
 					<md-icon md-svg-icon="map"></md-icon>
 					<input ng-model="vm.profile.address" type="text" readonly>
 				</md-input-container>
-				<md-content>
-					<a class="input-overlay" href="">Iniciar</a>
-					<md-input-container class="md-icon-float md-block">
-						<label>Chat</label>
-						<md-icon md-svg-icon="chat"></md-icon>
-						<input value=" " readonly/>
-					</md-input-container>
-				</md-content>
+					<md-button class="md-primary" ng-click="vm.startChar()" ng-disabled="!vm.profile.isOnline">
+						<md-icon md-svg-icon="account_circle" ng-style="{'fill': vm.profile.isOnline?'green':'red'}"></md-icon>
+						<span>{{vm.profile.isOnline? 'Iniciar chat' : 'Desconectado'}}<span>
+					</md-button>
 				<md-button class="md-primary" ng-click="vm.openEditProfileDialog($event)" ng-if="vm.showEdit">Editar perfil</md-button>
 			</md-content>
 		</md-card-content>
