Entrada de texto en color blanco, mejoras de maquetación

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -4,18 +4,16 @@
     <div>
       <div class="inLine">
         <md-input-container class="md-icon-float md-block">
-            <label ng-if="vm.switch">Buscar en Ofertas</label>
-            <label ng-if="!vm.switch">Buscar en Demandas</label>
+            <label class="input-white">Buscar en {{vm.switch? "Ofertas" : "Demandas"}}</label>
           <md-icon md-svg-src="/assets/svg/search.svg" class="search"></md-icon>
-          <input ng-model="vm.home_search" type="text">
+          <input class="input-white" ng-model="vm.home_search" type="text">
         </md-input-container>
-        <md-button ng-click="">Go</md-button>
+        <md-button ng-click="">Buscar</md-button>
       </div>
     </div>
     <div class="inLine">
       <md-switch ng-model="vm.switch">
-        <p ng-if="vm.switch">&nbsp Oferta &nbsp &nbsp</p>
-        <p ng-if="!vm.switch">Demanda</p>
+		<p>{{vm.switch? "Oferta" : "Demanda"}}</p>
       </md-switch>
     </div>
   </form>
