--- a/src/app/offer/offer.html
+++ b/src/app/offer/offer.html
@@ -9,7 +9,7 @@
 	
 	<md-card>
 		<md-card-content>
-			<v-accordion class="vAccordion--default">
+			<v-accordion class="vAccordion--default" control="accordion">
 				<v-pane>
 					<v-pane-header>
 						Filtrar ofertas
