--- a/src/app/demands/demands.html
+++ b/src/app/demands/demands.html
@@ -8,7 +8,7 @@
 	</md-toolbar>
 	<md-card>
 		<md-card-content>
-			<v-accordion class="vAccordion--default">
+			<v-accordion class="vAccordion--default" control="accordion">
 				<v-pane>
 					<v-pane-header>
 						Filtrar demandas
