Se hace un arreglo sobre el botn del switch para que no se mueva

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -13,7 +13,7 @@
     </div>
     <div class="inLine">
       <md-switch ng-model="vm.switch">
-		<p>{{vm.switch? "Oferta" : "Demanda"}}</p>
+		<p>{{vm.switch? "&nbsp Oferta &nbsp &nbsp" : "Demanda"}}</p>
       </md-switch>
     </div>
   </form>
