Corrección de error de carga de imagen al generar versión de producción

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -56,7 +56,7 @@ md-content.md-default-theme {
 }
 
 #background {
-  background-image: url("/assets/images/main.jpg");
+  background-image: url("../assets/images/main.jpg");
   color: white;
   font-size: 5em;
   text-align: center;
