Corrección de tamaño de imagen de pantalla principal

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,4 +1,4 @@
-﻿<div id="background">
+﻿<md-content id="background">
   <p>A la Orden!</p>
   <form>
     <div>
@@ -19,4 +19,4 @@
   </form>
   <md-button ng-click="vm.offersView()">Todas las Ofertas</md-button>
   <md-button ng-click="vm.demandsView()">Todas las Demandas</md-button>
-</div>
+</md-content>
