Ajuste de nombres para perfil de usuarios en vistas de oferta/demanda

--- a/src/app/offer/view/viewOffer.html
+++ b/src/app/offer/view/viewOffer.html
@@ -44,7 +44,7 @@
 				<md-content layout="row" flex>
 					<md-input-container class="md-block" flex>
 						<label>Usuario</label>
-						<input ng-model="vm.offer.username" readonly>
+						<input ng-model="vm.offer.userName" readonly>
 					</md-input-container>
 					<md-button ng-click="vm.viewProfile()" class="md-primary">
 						<md-icon md-svg-icon="account" aria-label="account"></md-icon>
