--- a/src/app/demands/view/viewDemand.html
+++ b/src/app/demands/view/viewDemand.html
@@ -30,7 +30,7 @@
 				<md-content layout="row" flex>
 					<md-input-container class="md-block" flex>
 						<label>Usuario</label>
-						<input ng-model="vm.demand.username" readonly>
+						<input ng-model="vm.demand.userName" readonly>
 					</md-input-container>
 					<md-button ng-click="vm.viewProfile()" class="md-primary">
 						<md-icon md-svg-icon="account" aria-label="account"></md-icon>
