Correcciones de responsive en pantallas de oferta/demanda y página principal, mejora de flujos

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,22 +1,18 @@
-﻿<div id="background">
-  <p>A la Orden!</p>
-  <form>
-    <div>
-      <div class="inLine">
-        <md-input-container class="md-icon-float md-block">
-            <label class="input-white">Buscar en {{vm.switch? "Ofertas" : "Demandas"}}</label>
-          <md-icon md-svg-src="/assets/svg/search.svg" class="search"></md-icon>
-          <input class="input-white" ng-model="vm.searchTittle" type="text">
-        </md-input-container>
-        <md-button ng-click="vm.searchByTittle()">Buscar</md-button>
-      </div>
-    </div>
-    <div class="inLine">
-      <md-switch ng-model="vm.switch">
+﻿<div layout="column" layout-align="center center" layout-align-xs="space-between center" id="background" flex layout-fill>
+	<h1 class="title">A la Orden!</h1>
+	<div layout="row">
+		<md-input-container class="md-icon-float">
+			<label class="input-white">Buscar en {{vm.switch? "Ofertas" : "Demandas"}}</label>
+			<md-icon md-svg-src="/assets/svg/search.svg" class="search"></md-icon>
+			<input class="input-white" ng-model="vm.searchTittle" type="text"/>
+		</md-input-container>
+		<md-button ng-click="vm.searchByTittle()">Buscar</md-button>
+	</div>
+	<md-switch ng-model="vm.switch">
 		<p>{{vm.switch? "&nbsp Oferta &nbsp &nbsp" : "Demanda"}}</p>
-      </md-switch>
-    </div>
-  </form>
-  <md-button ng-click="vm.offersView()">Todas las Ofertas</md-button>
-  <md-button ng-click="vm.demandsView()">Todas las Demandas</md-button>
+	</md-switch>
+	<div layout="row" layout-xs="column">
+		<md-button ng-click="vm.offersView()">Todas las Ofertas</md-button>
+		<md-button ng-click="vm.demandsView()">Todas las Demandas</md-button>
+	</div>
 </div>
