--- a/src/app/demands/view/viewDemand.html
+++ b/src/app/demands/view/viewDemand.html
@@ -37,8 +37,7 @@
 						<span>Ver perfil</span>
 					</md-button>
 				</md-content>
-				<md-button ng-click="vm.closeDialog()" class="md-primary">Cancelar</md-button>
-				<md-button ng-click="vm.applyDemand()" class="md-primary">Aplicar</md-button>
+				<md-button ng-click="vm.closeDialog()" class="md-primary">Cerrar</md-button>
 			</md-content>
 		</md-dialog-content>
 	</form>
