--- a/src/app/offer/view/viewOffer.html
+++ b/src/app/offer/view/viewOffer.html
@@ -52,8 +52,7 @@
 					</md-button>
 				</md-content>
 
-				<md-button ng-click="vm.closeDialog()" class="md-primary">Cancelar</md-button>
-				<md-button ng-click="vm.applyOffer()" class="md-primary">Aplicar</md-button>
+				<md-button ng-click="vm.closeDialog()" class="md-primary">Cerrar</md-button>
 			</div>
 			<div ng-if="vm.selectingLocation">
 				<ui-gmap-google-map center='vm.mapCenter' zoom='8' options="{'draggable':false, 'disableDoubleClickZoom':true, 'maxZoom':8, 'minZoom': 8}">
